# context-engineering-test

./: .env.example  .gitignore  INITIAL.md  README.md  pyproject.toml  requirements.txt  test_scenario_creation.py
.claude/: settings.local.json
PRPs/: storytelling-application.md
examples/agent/: exampleAgent.py
src/: INFINITE_LOOP_FIXES.md  __init__.py  main.py  test_fixed_app.py  test_infinite_loop.py
src/agents/: __init__.py  character.py  character_creator.py  prompts.py  scenario_generator.py  storyteller.py
src/cli/: __init__.py  commands.py  interface.py
src/models/: __init__.py  session.py  story.py
src/storage/: __init__.py  file_storage.py  models.py
src/utils/: __init__.py  helpers.py
tests/: __init__.py  conftest.py  conftest_full.py  test_agents.py  test_cli.py  test_storage.py
